--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+ 
+div {
+  max-width: 768px;
+  max-height: 1024px;
+  margin: auto;
+  display: block;
+}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
